@@ -1,7 +1,7 @@
 ﻿//------------------------------------------------------------------------------
 // <auto-generated>
 //     This code was generated by a tool.
-//     Runtime Version:2.0.50727.4927
+//     Runtime Version:2.0.50727.5446
 //
 //     Changes to this file may cause incorrect behavior and will be lost if
 //     the code is regenerated.
@@ -680,6 +680,15 @@ namespace MySql.Data.MySqlClient.Properties {
         public static string RoutineNotFound {
             get {
                 return ResourceManager.GetString("RoutineNotFound", resourceCulture);
+            }
+        }
+        
+        /// <summary>
+        ///   Looks up a localized string similar to Snapshot isolation level is not supported..
+        /// </summary>
+        public static string SnapshotNotSupported {
+            get {
+                return ResourceManager.GetString("SnapshotNotSupported", resourceCulture);
             }
         }
         
